--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../public/style.css">    
+    <link rel="stylesheet" href="./style.css">    
 <title>KFUPM Photoclub</title>
 </head>
 
@@ -13,7 +13,7 @@
 <body>
     <header>
     </header>
-    <script src="../public/header.js"></script>
+    <script src="./header.js"></script>
 
     <main>
         <section>
