--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./style.css">    
-<title>KFUPM Photoclub</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./covrege.css">
+    <link rel="stylesheet" href="./event.css">
+    <title>KFUPM Photoclub</title>
 </head>
 
 
@@ -17,9 +20,45 @@
 
     <main>
         <section>
-            <div class="card"></div>
+            <div>
+                <h3>Recent</h3>
+                <div class="coverageCard">
+                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                    <p class="cardTitle">Ceremony honoring club presidents</p>
+                    <P class="cardDate">2023/12/4</P>
+                </div>
+
+                <div class="eventCard">
+                    <div class="titlePar">
+                        <span class="cardTitle">Portrait photography</span>
+                        <div class="registerButton"> <span>register</span></div>
+                    </div>
+
+                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
+                        Don’t miss this chance <br>
+                        Note: “your attend count with non academic activities“
+                    </p>
+                    <div class="cardDetails">
+                        <span>Date: 7/10/2023</span>
+                        <span>Time: 7:30 PM</span>
+                        <span>Location: Building 19 - 210</span>
+                    </div>
+                </div>
+
+
+            </div>
+
         </section>
     </main>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </html>
