--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -17,7 +17,15 @@
 
     <main>
         <section>
-            <div class="card"></div>
+            <div>
+                <h3>Recent</h3>
+                <div class="card">
+                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                    <p class="cardTitle">Ceremony honoring club presidents</p>
+                    <P class="cardDate">2023/12/4</P>
+                </div>
+            </div>
+
         </section>
     </main>
 </body>
