fix menu z-index

--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -20,11 +20,20 @@
         <section>
             <div>
                 <h3>Recent</h3>
-                <div class="card">
+                <div class="eventsCard">
                     <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
                     <p class="cardTitle">Ceremony honoring club presidents</p>
                     <P class="cardDate">2023/12/4</P>
                 </div>
+
+                <!-- <h3>Announcements</h3>
+                <div class="announcementsCard">
+                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
+                    <p class="cardTitle">Ceremony honoring club presidents</p>
+                    <P class="cardDate">2023/12/4</P>
+                </div> -->
+
+
             </div>
 
         </section>
