--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">    
+    <link rel="stylesheet" href="./style.css">  
+    <link rel="stylesheet" href="./covrege.css"> 
+    <link rel="stylesheet" href="./event.css"> 
     <title>KFUPM Photoclub</title>
 </head>
 
@@ -20,19 +22,23 @@
         <section>
             <div>
                 <h3>Recent</h3>
-                <div class="eventsCard">
+                <div class="coverageCard">
                     <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
                     <p class="cardTitle">Ceremony honoring club presidents</p>
                     <P class="cardDate">2023/12/4</P>
                 </div>
 
-                <!-- <h3>Announcements</h3>
-                <div class="announcementsCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div> -->
-
+                <div class="eventCard">
+                    <h2 class="cardTitle">Portrait photography</h2>
+                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb Don’t miss this chance  Note: “your attend count with non academic activities“
+                    </p>
+                    <div class="cardDetails">
+                      <span>Date: 7/10/2023</span>
+                      <span>Time: 7:30 PM</span>
+                      <span>Location: Building 19- 210</span>
+                    </div>
+                  </div>
+                
 
             </div>
 
