--- a/SWE363 Project/html/login.html
+++ b/SWE363 Project/html/login.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./login.css">
-        <title>Login</title>
-    </head>
-    <body>
-        <header>
 
-        </header>
-        <script src="./header.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./login.css">
+    <title>Login</title>
+</head>
 
-        <main>
-            <div class="loginContainer">
-                <form class="login-form">
-                    <h2>Login</h2>
-                    <label for="username">Username:</label>
+<body>
+    <header>
+
+    </header>
+    <script src="./header.js"></script>
+
+    <main>
+        <div class="loginContainer">
+            <form class="login-form">
+                <h2>Login</h2>
+                <span>
+                    <label for="username">Username:</label> 
+                    <br>
                     <input type="text" id="username" name="username" required>
+                </span>
 
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password"
-                        required>
+                <span>
+                    <label for="password">Password:</label> 
+                    <br>
+                    <input type="password" id="password" name="password" required>
+                </span>
+                
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </main>
+</body>
 
-                    <button type="submit">Login</button>
-                </form>
-            </div>
-        </main>
-    </body>
 </html>
