--- a/SWE363 Project/html/register.html
+++ b/SWE363 Project/html/register.html
@@ -43,6 +43,14 @@
                 
                 <button type="submit">Register</button>
             </form>
+
+            <!-- <script>
+                function redirectToIndex() {
+                    // Redirect to index.html
+                    window.location.href = "index.html";
+                }
+            </script> -->
+        
             <a href="/login.html">Login</a>
         </div>
     </main>
