--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./covrege.css">
-    <link rel="stylesheet" href="./event.css">
+    <link rel="stylesheet" href="./covregeCard.css">
+    <link rel="stylesheet" href="./eventCard.css">
     <title>KFUPM Photoclub</title>
 </head>
 
