--- a/SWE363 Project/html/index.html
+++ b/SWE363 Project/html/index.html
@@ -14,43 +14,12 @@
 
 
 <body>
-    <header>
-            </header>
-<script src="./header.js"></script>
 
-    <main>
-        <section>
-            <div>
-                <h3>Recent</h3>
-                <div class="coverageCard">
-                    <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
-                    <p class="cardTitle">Ceremony honoring club presidents</p>
-                    <P class="cardDate">2023/12/4</P>
-                </div>
-
-                <div class="eventCard">
-                    <div class="titlePar">
-                        <span class="cardTitle">Portrait photography</span>
-                        <div class="registerButton"> <span>register</span></div>
-                    </div>
-
-                    <p class="cardcontent">Short course in portrait photography by Mr. Mohammad Shabeb<br>
-                        Don’t miss this chance <br>
-                        Note: “your attend count with non academic activities“
-                    </p>
-                    <div class="cardDetails">
-                        <span>Date: 7/10/2023</span>
-                        <span>Time: 7:30 PM</span>
-                        <span>Location: Building 19 - 210</span>
-                    </div>
-                </div>
+    <h1>index.html</h1>
 
 
-            </div>
-
-        </section>
-    </main>
 </body>
+<script src="index.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
